# django-request-log

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  README  README.md  demo.db  pyproject.toml  tox.ini
.github/workflows/: tox.yml
demo/: settings.py  urls.py  views.py
demo/templates/: index.html
request_logger/: admin.py  apps.py  compat.py  decorators.py  models.py  settings.py
request_logger/management/commands/: truncate_request_logs.py
request_logger/migrations/: 0001_initial.py  0002_alter_requestlog_response_class.py  0002_remove_requestlog_reference_requestlog_view_func.py  0002_requestlog_response_class.py  0003_requestlog_context.py
tests/: settings.py  test_decorators.py  test_models.py  test_request_logger.py
