[tool.poetry]
name = "django-request-logger-2"
version = "0.4"
description = "Django model for storing HttpRequest information."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README"
homepage = "https://github.com/yunojuno/django-request-log"
repository = "https://github.com/yunojuno/django-request-log"
documentation = "https://github.com/yunojuno/django-request-log"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "request_logger" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2 || ^4.0 || ^5.0"
django-rest-framework = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[tool.poetry.extras]
demo = ["django-rest-framework"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
